--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
 
+/* max width 1440 px*/
+
 * {
     font-family: Inter, Courier, monospace;
 }
@@ -16,24 +18,27 @@ body {
     position: sticky;
     top: 0;
     background-color: white;
+
+    z-index: 10;
   }
 
 .Header_Container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    max-width: 1441px;
-    padding: 15px 0;
+    max-width: 1440px;
+    height: 100px;
     margin: 0 auto;
 }
 
 .Header_Title {
-    color: #42b549;;
+    flex-basis: 1;
+    color: #42b549;
 }
 
 .Header_Search_Container {
-    width: 60%;
-  
+    flex-basis: 2;
+
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -45,13 +50,16 @@ body {
 
 .Header_Search_Container input {
     width: 600px;
-    padding: 0 15px;
+    padding: 5px 15px;
     box-sizing: border-box;
     border: 1px solid #8e8e8e;
     border-radius: 15px;
 }
 
 .Header_Nav_Login {
+
+    flex-basis: 1;
+
     padding: 0;
     margin: 0;
     gap: 10px;
@@ -70,6 +78,130 @@ body {
     -o-border-radius: 10px;
     cursor: pointer;
 }
+
+.Header_Category {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 10px;
+    width: 60%;
+    position: absolute;
+    top: 100px;
+    align-items: flex-start;
+    align-content: flex-start;
+
+    padding: 20px;
+}
+
+.Header_Category li {
+    cursor: pointer;
+    padding: 10px 15px;
+    background-color: #42b549;
+    color: white;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+/* SECTION */
+
+.section_container {
+    max-width: 1440px;
+    padding: 5% 5% 0 5%;
+    margin: 0px auto;
+
+    box-sizing: border-box;
+}
+
+.section_header {
+    display: flex;
+    flex-wrap: wrap;
+
+    padding-bottom: 20px;
+}
+
+.section_header p {
+    margin: 0;
+}
+
+.section_body {
+    position: relative;
+    width: 100%;
+}
+
+.section_products_highlight {
+    height: 350px;
+    background-color: #42b549;
+    width: 300px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+}
+
+.section_products_highlight h3 {
+    width: 40px;
+    margin-left: 40px;
+    color: white;
+}
+
+.section_products {
+    position: absolute;
+    top: 42px;
+    right: 0px;
+
+    width: 85%;
+
+    display: flex;
+    overflow-x: scroll;
+
+    gap: 20px;
+
+    box-sizing: border-box;
+}
+
+
+/* CARD */
+
+.card_product_container {
+
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    background-color: white;
+}
+
+.card_product_image {
+    width: 180px;
+    height: 180px;
+}
+
+.card_product_body {
+    margin: 5px 10px;
+}
+
+.card_product_diskon {
+    display: flex;
+}
+
+.card_product_review {
+    display: flex;
+}
+
+.card_product_body p {
+    font-size: 12px;
+    margin: 0;
+}
+
+
 
   /*
 .Header_Container {
