--- a/src/style.css
+++ b/src/style.css
@@ -120,12 +120,30 @@ body {
 .section_header {
     display: flex;
     flex-wrap: wrap;
-
-    padding-bottom: 20px;
+    align-items: flex-end;
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
 .section_header p {
     margin: 0;
+    font-size: 16px;
+}
+
+.section_header p:first-child {
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.section_header_timestamp {
+    width: 90px;
+    text-align: center;
+}
+
+.waktu_habis {
+    width: fit-content;
+    text-align: center;
 }
 
 .section_body {
@@ -155,50 +173,178 @@ body {
 
 .section_products {
     position: absolute;
-    top: 42px;
-    right: 0px;
-
-    width: 85%;
-
+    top: 0;
+    left: 160px;
+    width: 82%;
     display: flex;
-    overflow-x: scroll;
-
+    overflow-x: hidden;
+    padding: 22.5px 5px;
     gap: 20px;
-
     box-sizing: border-box;
+}
+
+.button_left, .button_right {
+    position: absolute;
+    top: 130px;
+    right: 0;
+    width: 40px;
+    height: 40px;
+}
+
+.button_right {
+    top: 180px !important;
+    transform: scaleX(-1) !important;
+    -webkit-transform: scaleX(-1) !important;
+    -moz-transform: scaleX(-1) !important;
+    -ms-transform: scaleX(-1) !important;
+    -o-transform: scaleX(-1) !important;
+}
+
+.button_left:hover, .button_right:hover  {
+    scale: 1.1;
+    cursor: pointer;
 }
 
 
 /* CARD */
 
 .card_product_container {
-
     display: flex;
+    width: min-content;
+    height: max-content;
+    box-sizing: border-box;
     flex-direction: column;
-    border: 1px solid black;
     background-color: white;
+    box-shadow: 0px 1px 2px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
 }
 
 .card_product_image {
-    width: 180px;
+    object-fit: cover;
+    width: 190px;
     height: 180px;
+    border-radius: 15px 15px 0px 0px;
+    -webkit-border-radius: 15px 15px 0px 0px;
+    -moz-border-radius: 15px 15px 0px 0px;
+    -ms-border-radius: 15px 15px 0px 0px;
+    -o-border-radius: 15px 15px 0px 0px;
 }
 
 .card_product_body {
-    margin: 5px 10px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 5px;
 }
 
 .card_product_diskon {
     display: flex;
+    gap: 10px;
 }
 
 .card_product_review {
     display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.card_product_price { 
+    font-size: 20px !important;
+    font-weight: 600;
 }
 
 .card_product_body p {
     font-size: 12px;
     margin: 0;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+}
+
+/* All_Products_View_Board */
+
+.Section_Allproducts {
+    max-width: 1440px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 5%;
+}
+
+.all_product_header {
+    margin: 20px 0;
+    position: relative;
+    height: 40px;
+}
+
+.categories_container_header {
+    overflow: hidden;
+
+    position: absolute;
+    right: 0;
+    width: 80%;
+}
+
+.all_product_categories {
+    display: flex;
+    gap: 15px;
+    color: white;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: max-content;
+}
+
+.all_product_category {
+    padding: 10px 15px;
+    flex-basis: 1;
+    margin: 0;
+    text-align: center;
+    cursor: pointer;
+    background-color: #42b549;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.all_product_body {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    row-gap: 20px;
+
+    justify-content: space-between;
+}
+
+.button_left2, .button_right2 {
+    position: absolute;
+    top: 0;
+    left: 40px;
+    width: 40px;
+    height: 40px;
+}
+
+.button_right2 {
+    left: 0 !important;
+    transform: scaleX(-1) !important;
+    -webkit-transform: scaleX(-1) !important;
+    -moz-transform: scaleX(-1) !important;
+    -ms-transform: scaleX(-1) !important;
+    -o-transform: scaleX(-1) !important;
+}
+
+.button_left2:hover, .button_right2:hover  {
+    scale: 1.1;
+    cursor: pointer;
 }
 
 
