--- a/src/style.css
+++ b/src/style.css
@@ -37,8 +37,6 @@ body {
 }
 
 .Header_Search_Container {
-    flex-basis: 2;
-
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -105,6 +103,47 @@ body {
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+}
+
+/* ITEM SEARCH */
+
+.Result_Search_Container {
+    position: absolute;
+    top: 100px;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 0px 40px;
+}
+
+.Result_Search_Item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 650px;
+    flex-basis: 1;
+    box-sizing: border-box;
+}
+
+.Result_Search_Item:hover{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    cursor: pointer;
+}
+
+.Result_Search_Item img {
+    width: 50px;
+    height: 50px;
+}
+
+.Result_Search_Item p {
+    flex-basis: 80%;
+    text-align: left;
+}
+
+.Result_Search_Item:nth-child(1) {
+    text-align: right;
 }
 
 /* SECTION */
